<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regisActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/gambar_bioskop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Register"
        android:textColor="@color/black"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Nama"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_user_24"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTgl"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Masukkan Tanggal Lahir" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutnoTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="noTelp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Email"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_email_24"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Password"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24"
            android:layout_marginBottom="8dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayout3"
        app:layout_constraintStart_toStartOf="@+id/LinearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout3">

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnReg"-->
<!--            style="@style/Widget.MaterialComponents.Button.TextButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Registrasi" />-->
        <de.timonknispel.ktloadingbutton.KTLoadingButton
            android:id="@+id/btnReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:buttonName="Registrasi"
            app:buttonColor="#C8B51B"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>